open-policy-agent/authorization/disallow-scc-runasany/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoRunAsAnySCC
metadata:
  name: scc-disallow-runasany
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: ["security.openshift.io"]
        kinds: ["SecurityContextConstraints"]
  parameters:
    allowedSCCs:
      - anyuid
      - hostmount-anyuid
      - machine-api-termination-handler
      - node-exporter
      - nonroot
      - privileged
